feat: ajust background opacity

--- a/style.css
+++ b/style.css
@@ -21,7 +21,15 @@
   --sec-color: #4894ff;
 }
 
-body {
+body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  z-index: -1;
   background: var(--light-200) url("./assets/background_img.png") no-repeat
     center/cover;
 }
